@@ -2,14 +2,18 @@ package org.bf2.operator;
 
 import io.quarkus.test.junit.QuarkusTestProfile;
 
-import java.util.Collections;
 import java.util.Map;
+
+import static java.util.Map.entry;
 
 public class MockProfile implements QuarkusTestProfile {
 
     @Override
     public Map<String, String> getConfigOverrides() {
-        return Collections.singletonMap("quarkus.scheduler.enabled", "false");
+        Map<String, String> overrides = Map.ofEntries(
+            entry("quarkus.scheduler.enabled", "false")
+        );
+        return overrides;
     }
 
 }
